external/qt-everywhere-opensource-src-5.4.1/qtxmlpatterns/tests/auto/xmlpatternsdiagnosticsts/TestSuite/Queries/XQuery/ShouldFail/fail-16.xq
xquery version "1.0";
"a parse error
